<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetupActivity">


    <TextView
            android:id="@+id/testing123"
            android:text="@string/txt_setup_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintHorizontal_bias="0.498"/>
    <ScrollView
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:id="@+id/scrollView2" style="@android:style/Widget.ScrollView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testing123"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.079"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:textSize="14sp"
                      android:layout_marginTop="15dp"
                      android:layout_marginStart="15dp"
                      android:text="@string/txt_connection"/>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp">

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:text="@string/txt_server_ip"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:layout_marginTop="15dp"
                        android:text="@string/txt_default_ip"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:ems="8"
                        android:id="@+id/txt_server_ip"/>

            </FrameLayout>


            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:textSize="14sp"
                      android:layout_marginTop="15dp"
                      android:layout_marginStart="15dp"
                      android:text="@string/txt_category_ssl"/>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"

            >
                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:text="@string/txt_ca"/>

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:layout_marginTop="20dp"
                          android:id="@+id/txt_ca_pem_verify"
                          android:text=""/>

                <Button android:id="@+id/btnSelectCaPem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="15dp"
                        android:textSize="12sp"
                        android:text="@string/btn_select"/>

            </FrameLayout>

            <Space android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"

            >
                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:text="@string/txt_key"/>

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:layout_marginTop="20dp"
                          android:id="@+id/txt_client_key_verify"
                          android:text=""/>

                <Button android:id="@+id/btnSelectClientKey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="15dp"
                        android:textSize="12sp"
                        android:text="@string/btn_select"/>

            </FrameLayout>

            <Space android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"

            >
                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:text="@string/txt_pem"/>

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:layout_marginTop="20dp"
                          android:id="@+id/txt_client_pem_verify"
                          android:text=""/>

                <Button android:id="@+id/btnSelectClientPem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="15dp"
                        android:textSize="12sp"
                        android:text="@string/btn_select"/>

            </FrameLayout>

            <Space android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:textSize="14sp"
                      android:layout_marginStart="15dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/txt_category_client"/>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_marginTop="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"

            >
                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:text="@string/txt_client_id"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:layout_marginTop="15dp"
                        android:text="@string/txt_client_id_prev"
                        android:layout_gravity="center_horizontal"
                        android:ems="15"
                        android:id="@+id/txt_client_id"/>

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:layout_marginTop="65dp"
                          android:text="@string/txt_username"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:layout_marginTop="85dp"
                        android:text="phone-01"
                        android:layout_gravity="center_horizontal"
                        android:ems="15"
                        android:id="@+id/txt_client_name"/>

                <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                          android:textSize="14sp"
                          android:layout_marginTop="135dp"
                          android:text="@string/txt_password"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_marginTop="155dp"
                        android:text="asdfASDF1234!!!!"
                        android:layout_gravity="center_horizontal"
                        android:ems="15"
                        android:id="@+id/txt_client_password"/>

            </FrameLayout>

            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent" >
                <Button
                        android:text="@string/txt_test_connection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btnNext"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        style="@style/Widget.AppCompat.Button"/>
            </FrameLayout>
            <Space android:layout_width="match_parent" android:layout_height="80dp" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>