<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="59dp"
            android:layout_width="match_parent"
            android:theme="@style/Theme.BscFront.AppBarOverlay"
            android:visibility="invisible"
    >

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
            android:id="@+id/frmLogin"
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


        <TextView
                android:id="@+id/lblUsername"
                android:text="@string/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txt_username"
        />

        <TextView
                android:id="@+id/lblPassword"
                android:text="@string/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txt_password"
        />

        <Button
                android:id="@+id/btnConnect"
                android:text="@string/btn_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>